[package]
name = "spl-token-test"
version = "0.1.0"
description = "SPL Token"
authors = ["BaldyAsh <antongrigorjev2010@gmail.com>"]
repository = "https://github.com/baldyash/spl-token-test"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
solana-program = "1.7.4"
thiserror = "1.0"

[dev-dependencies]
solana-sdk = "1.7.4"

[lib]
name = "spl_token_test"
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
